<resources>
    <string name="app_name">Sparky</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_it_s_all_yours">JOIN, IT\'S ALL YOURS</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="by_registering_i_confirm">By registering, I confirm that I have read and agree to: General terms and conditions, Data protection policy, Price list</string>
    <string name="have_an_account_log_in">HAVE AN ACCOUNT? LOG IN</string>
    <string name="logo">LOGO</string>
    <string name="chat_live_stream">Чат прямого эфира</string>
    <string name="make_donate">Сделать донат</string>
    <string name="crypto_bubbles">Crypto Bubbles</string>
    <string name="search_crypto">Поиск криптовалюты</string>

</resources>