<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="@dimen/_16dp"
            tools:context=".screens.registrate.RegistrationInactiveFragment">

            <ImageView
                android:id="@+id/ivLoot"
                android:layout_width="@dimen/_260dp"
                android:layout_height="@dimen/_250dp"
                android:src="@drawable/sparky"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/tvJoin"
                android:textColor="#F8FAFF"
                android:textSize="@dimen/_30sp"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_it_s_all_yours"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLoot"
                tools:ignore="MissingConstraints" />
            <LinearLayout
                android:layout_marginTop="@dimen/_25dp"
                app:layout_constraintTop_toBottomOf="@id/tvJoin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">
                <FrameLayout
                    android:id="@+id/frameLayout1"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48dp"
                    tools:ignore="MissingConstraints">
                    <ImageView
                        android:id="@+id/btnBackgroundGoogle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/frame_62"/>
                    <ImageView
                        android:id="@+id/ivGoogle"
                        android:layout_marginStart="@dimen/_54dp"
                        android:layout_gravity="start|center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/google_icon"/>
                    <TextView
                        android:fontFamily="@font/regular"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/_90dp"
                        android:layout_gravity="start|center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/continue_with_google"/>
                    <com.google.android.material.button.MaterialButton
                        android:clickable="false"
                        android:paddingHorizontal="@dimen/_33dp"
                        android:gravity="start"
                        android:id="@+id/btnSignUpGoogle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"/>
                </FrameLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/checkbox"
                        android:checked="false"
                        android:theme="@style/Theme.AppCompat"
                        android:layout_width="@dimen/_18dp"
                        android:layout_height="@dimen/_18dp"
                        android:button="@drawable/checkbox_registrate_style"/>
                    <TextView
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#F8FAFF"
                        android:text="@string/by_registering_i_confirm"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>